results/SVCOMP/4-shot/log-ExSymExeI2F-2024_03_18_21_45_14.txt
class Main {

  //@ ensures \result <==> x != 3 && x != 0;
  //@ ensures !\result ==> test(x);
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x != Integer.MAX_VALUE;
  //@ requires x != Integer.MIN_VALUE;
  //@ ensures \result ==> ((float)(x + 1)) > 0;
  //@ ensures !\result ==> !((float)(x + 1)) > 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:4: error: non-static method test(int) cannot be referenced from a static context
  //@ ensures !\result ==> test(x);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:16: error: bad operand type float for unary operator '!'
  //@ ensures !\result ==> !((float)(x + 1)) > 0;
                           ^
2 errors

